# totallynotgeneratedbyaichat

./: Readme.md  app.py  models.py  pyproject.toml  replit.nix
static/css/: style.css
static/js/: chat.js
templates/: index.html
tests/: conftest.py  test_frontend.py  test_socket_events.py
