[project]
name = "totallynotgeneratedbyaichat"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11, <4.0"
dependencies = [
    "email-validator>=2.2.0",
    "flask-socketio>=5.5.1",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "eventlet>=0.39.0",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "pytest-flask>=1.3.0",
    "pytest-socket>=0.7.0",
    "selenium>=4.28.1",
    "pytest-selenium>=4.1.0",
    "pytest>=8.3.4",
]
[tool.poetry]
package-mode = false